# qr-code-kit

./: LICENSE  README.md  pyproject.toml
qr_code/: __init__.py  qrcoder.py
qr_code_kit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
